# break-eternity

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  tests.rs
